--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
+        "php": ">=7.0",
         "react/socket": "^1.9",
         "ratchet/pawl": "^0.3.5",
         "react/event-loop": "^1.2",
-        "react/promise": "^2.8"
+        "react/promise": "^2.8",
+        "react/http": "1.5"
     },
     "require-dev": {
         "phpunit/phpunit": "9.5.*",
